--- a/2_curd_operations/style.css
+++ b/2_curd_operations/style.css
@@ -1,58 +1,9 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #f5f5f5;
-}
-
-.container {
-  display: flex;
-}
-
-.sidebar {
-  width: 300px;
-  padding: 20px;
-  background: white;
-}
-
-.sidebar input {
-  width: 100%;
-  padding: 8px;
-  margin-bottom: 10px;
-}
-
-.sidebar button {
-  width: 100%;
-  padding: 10px;
-  background: black;
-  color: white;
-  border: none;
-}
-
-.main {
-  flex: 1;
-  padding: 20px;
-}
-
-.grid {
+#booksGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 15px;
+  gap: 20px;
 }
-
 .card {
-  background: white;
+  border: 1px solid gray;
   padding: 10px;
-  border-radius: 5px;
-}
-
-.card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-.card button {
-  margin-top: 5px;
-  width: 100%;
-  padding: 6px;
 }
